Fix vertical align of names with website style

--- a/static/website.css
+++ b/static/website.css
@@ -81,6 +81,9 @@
 .website .name {
     font-weight: bold;
 }
+.website .name > * {
+    vertical-align: middle;
+}
 .website .player {
     background-color: #fff;
     border: 1px solid #e1e1e1;
